added background img

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!-- blog template -->
+
+<style>
+
+body {
+	background-image: /assets/img/doki_crop.jpg;
+	background-repeat: repeat;
+}
+
+</style>
+
 <!--            ID for automation                     file           name               -->
 <h3 id="-go-to-a-blog-post-posts-1-html-"><a href="posts/1.html">Go to a blog post</a></h3>
 <h3 id="-go-to-a-blog-post-posts-2-html-"><a href="posts/2.html">Pwnagotchi</a></h3>
