--- a/index.html
+++ b/index.html
@@ -85,7 +85,13 @@ body {
     <div class="card">
       <h2>Pwnagotchi</h2>
       <h5>A digital pet for cyber security, Jun 13, 2021</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
+      <figure>
+      		    <img src="../assets/img/pwnagotchi_title.gif" 
+      		    alt="a raspberry pi 0w with a screen and a battery bank" 
+      		    title="a raspberry pi 0w with a screen and a battery bank" > 
+      
+      		    <figcaption>A cute little virtural pet O-O</figcaption>
+      </figure>
       <p>Some text</p>
       <p>Much text</p>
     </div>
@@ -120,7 +126,7 @@ body {
 </div>
 
 <div class="footer">
-  <h2>Footer</h2>
+  <h2>Much wow you reached to end</h2>
 </div>
 
 </body>
