--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@ body {
       		    <img src="../assets/img/pwnagotchi_title.gif" 
       		    alt="a raspberry pi 0w with a screen and a battery bank" 
       		    title="a raspberry pi 0w with a screen and a battery bank"
-      		    height="500" > 
+      		    height="500"
+      		    width= auto > 
                 <figcaption></figcaption>
         </figure>
         <p>Pwnagotchi is an A2C-based “AI” powered by bettercap and running on a Raspberry Pi Zero W that learns from its surrounding WiFi environment in order to maximize the crackable WPA key material it captures</p>
