--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ body {
 
 /* Right column */
 .rightcolumn {
-  float: left;
+  float: right;
   width: 25%;
-  padding-left: 20px;
+  padding-left: 0px;
 }
 
 /* Fake image */
@@ -114,14 +114,21 @@ body {
         <p>Hope you enjoy tour stay!</p>
     </div>
   </div>
-</div>
+
 
 
   
   <div class="rightcolumn">
     <div class="card">
       <h2>About Me</h2>
-      <div class="fakeimg" style="height:100px;">Image</div>
+      <figure>
+        <img src="url:https://https://clipground.com/images/dokkaebi-logo-5.jpg" 
+        alt="a raspberry pi 0w with a screen and a battery bank" 
+        title="a raspberry pi 0w with a screen and a battery bank"
+        height="500"
+        width= auto > 
+          <figcaption></figcaption>
+  </figure>
       <p>Cyber Security</p>
     </div>
     
