fixed Dokkabi pic

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ body {
     <div class="card">
       <h2>About Me</h2>
       <figure>
-        <img src="url:https://https://clipground.com/images/dokkaebi-logo-5.jpg" 
-        alt="a raspberry pi 0w with a screen and a battery bank" 
-        title="a raspberry pi 0w with a screen and a battery bank"
+        <img src="https://https://clipground.com/images/dokkaebi-logo-5.jpg" 
+        alt="Dokkabi" 
+        title="Dokkabi"
         height="500"
         width= auto > 
           <figcaption></figcaption>
