fixed Dokkabi pic

--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@ body {
     <div class="card">
       <h2>About Me</h2>
       <figure>
-        <img src="https://https://clipground.com/images/dokkaebi-logo-5.jpg" 
+        <img src="https://clipground.com/images/dokkaebi-logo-5.jpg" 
         alt="Dokkabi" 
         title="Dokkabi"
-        height="500"
+        height="50"
         width= auto > 
           <figcaption></figcaption>
   </figure>
