fixed Dokkabi pic

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@ body {
         <h2>Pwnagotchi</h2>
         <h5>A digital pet for cyber security, Jun 13, 2021</h5>
         <figure>
-      		    <img src="../assets/img/pwnagotchi_title.gif" 
+      		    <img src="https://media.giphy.com/media/f9GsXyfgEQbY65fnhu/source.gif" 
       		    alt="a raspberry pi 0w with a screen and a battery bank" 
       		    title="a raspberry pi 0w with a screen and a battery bank"
-      		    height="500"
+      		    height="200"
       		    width= auto > 
                 <figcaption></figcaption>
         </figure>
