--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ body {
         <h5>The blog is offical, Jun 1, 2021</h5>
         <!--<div class="fakeimg" style="height:200px;">Image</div>-->
         <p>This is where i will be posting new and large updates about my projects.</p>
-        <p>Hope you enjoy tour stay!</p>
+        <p>Hope you enjoy your stay!</p>
     </div>
   </div>
 
