added like to dot files

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ body {
             <!--<div class="fakeimg" style="height:200px;">Image</div>-->
             <p>This is my personal Dot files that i use on debian based linux systems.</p>
             <p>feel free to use my files and if you have suggestions please tell me them.</p>
+            <p><a href="https://github.com/TheTrueZeroTwo/DotFiles">Dot Files</a></p>
         </div>
 
         <div class="card">
